force-app/main/default/objects/Citizen_Feedback__c/Citizen_Feedback__c.object-meta.xml
<CustomObject>
    <description>Stores feedback and satisfaction ratings provided by citizens after their grievance or service request has been resolved. Helps measure service quality and accountability.</description>
    <label>Citizen Feedback</label>
    <nameField>
        <label>Citizen Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Citizen Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>