force-app/main/default/objects/Citizen_Feedback__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links feedback to the citizen who submitted it.</description>
    <inlineHelpText>Links feedback to the citizen who submitted it.</inlineHelpText>
    <label>Citizen</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Citizen Feedbacks</relationshipLabel>
    <relationshipName>Citizen_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>