force-app/main/default/objects/Citizen_Feedback__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Optional detailed feedback from the citizen.</description>
    <inlineHelpText>Optional detailed feedback from the citizen.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>