force-app/main/default/objects/Citizen_Feedback__c/fields/Feedback_ID__c.field-meta.xml
<CustomField>
    <fullName>Feedback_ID__c</fullName>
    <description>Unique identifier for each feedback record.</description>
    <displayFormat>FB-{0000}</displayFormat>
    <inlineHelpText>Unique identifier for each feedback record.</inlineHelpText>
    <label>Feedback ID</label>
    <type>AutoNumber</type>
</CustomField>