force-app/main/default/objects/Citizen_Feedback__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Citizen rates their satisfaction.</description>
    <inlineHelpText>Citizen rates their satisfaction.</inlineHelpText>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 – Very Dissatisfied</fullName>
            </value>
            <value>
                <fullName>2 – Dissatisfied</fullName>
            </value>
            <value>
                <fullName>3 – Neutral</fullName>
            </value>
            <value>
                <fullName>4 – Satisfied</fullName>
            </value>
            <value>
                <fullName>5 – Very Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>