force-app/main/default/objects/Citizen_Feedback__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects feedback to the resolved grievance or service request</description>
    <inlineHelpText>Connects feedback to the resolved grievance or service request.</inlineHelpText>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Citizen Feedbacks</relationshipLabel>
    <relationshipName>Citizen_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>