force-app/main/default/objects/Citizen_Feedback__c/fields/Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On__c</fullName>
    <description>Records when the feedback was submitted.</description>
    <inlineHelpText>Records when the feedback was submitted.</inlineHelpText>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>